tree-sitter-prolog/grammars/prolog/test/corpus/simple.txt
==================
Clause 1
==================

test_predicate.

---

(source_file
  (clause_term
    (atom)
    (end)))

==================
Clause 2
==================

test_predicate:-
  true.

---

(source_file
  (clause_term
    (operator_notation
      (atom)
      (binary_operator)
      (atom))
    (end)))

====================
DCG
====================

test_dcg-->
  true.

---

(source_file
  (clause_term
    (operator_notation
      (atom)
      (binary_operator)
      (atom))
    (end)))

====================
Directive
====================

:-test_predicate.

---

(source_file
  (directive_term
    (directive_head)
    (atom)
    (end)))

====================
Strings
====================

test(a, "a-b && c").

---

(source_file
  (clause_term
    (functional_notation
      (atom)
      (open)
      (arg_list
        (atom)
        (arg_list_separator
          (comma))
        (double_quoted_list_notation))
      (close))
    (end)))
